force-app/main/default/objects/leankor__Resource__c/leankor__Resource__c.object-meta.xml
<CustomObject>
    <label>Resource</label>
    <nameField>
        <displayFormat>RSC-{0000000000}</displayFormat>
        <label>Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>