force-app/main/default/objects/leankor__Resource__c/fields/leankor__User__c.field-meta.xml
<CustomField>
    <fullName>leankor__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ResourceUsers</relationshipName>
    <type>Lookup</type>
</CustomField>