force-app/main/default/objects/leankor__Resource__c/recordTypes/leankor__Labor.recordType-meta.xml
<RecordType>
    <fullName>leankor__Labor</fullName>
    <active>true</active>
    <label>Labor</label>
</RecordType>